# embed-serial-reader

./: .clang-format  .gitmodules  CMakeLists.txt  plotter.py  start_mpu_collector.sh
src/: serial-reader.cpp
